<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <!-- All comments are notes to translators. -->
    <string name="app_name">LocaleText</string>

    <!-- The Help option in the options menu, no more than 30 chars. -->
    <string name="action_help">Help</string>

    <!-- The description includes a parenthetical expression.  -->
    <string name="description">Nougat is a family of confections made with sugar or honey, roasted nuts (almonds, walnuts, pistachios, hazelnuts, and macadamia nuts are common), whipped egg whites, and sometimes chopped candied fruit. It is used in a variety of candy bars and chocolates. </string>

    <!-- The product name includes "Package" to define a pack.  -->
    <string name="nougat">Nougat Candy Package</string>

    <!-- Do not translate.  -->
    <string name="support_phone" translatable="false">14155551212</string>

    <!-- Support Department should be capitalized.  -->
    <string name="help_text">If you need help, contact our Support Department.</string>

    <!-- The word "Language" in the appropriate language.  -->
    <string name="language">Language</string>

    <!-- The expiration date for the package, includes a colon.  -->
    <string name="expiration_date">Expiration Date:</string>

    <!-- Do not translate.  -->
    <string name="date" translatable="false">01/01/2017</string>

    <!-- The quantity to be entered, includes a colon.  -->
    <string name="quantity_label">Quantity:</string>

    <!-- The hint that tells the user to enter a number.  -->
    <string name="enter_a_number">Enter a number</string>

    <!-- The price for the package, includes a colon.  -->
    <string name="price_label">Price per package:</string>

    <!-- The total amount to pay for the package, includes a colon.  -->
    <string name="total_to_pay">Total to pay:</string>

    <!-- The warning to enter a number for the quantity. -->
    <string name="enter_number">Enter a number</string>

    <!-- Do not translate.  -->
    <string name="dial_log_message" translatable="false">Can\'t resolve app for ACTION_DIAL Intent.</string>
</resources>
